Movido para controller

--- a/app/views/inicio/index.html.erb
+++ b/app/views/inicio/index.html.erb
@@ -1,16 +1,5 @@
-<%
-url = "http://quemcuida.com.br/blog/feed/"
-_feed = Feedjira::Feed.fetch_and_parse url
-
-@links=[]
-_feed.entries.take(5).each do |post|
-	@links << [(link_to "#{post.title}", post.url ).html_safe,post.published]
-end
-
-%>
-
 <% @links.each do |link| %>
-	<%= link[0] %>
+	<%= link_to link[0][0], link[0][1] %>
 	<br>
 	<%= link[1].strftime("%b, %m %Y - %H:%M") %>
 	<br>
